--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/performance
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=user
 spring.datasource.password=12345
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
